Fix style with scrollbar.

--- a/app/assets/stylesheets/pages/next.css.sass
+++ b/app/assets/stylesheets/pages/next.css.sass
@@ -1,4 +1,5 @@
 .next-page
+  overflow: hidden
   h1
     text-align: left
   .previous
@@ -23,6 +24,12 @@
       background: $menu-background
 @media (min-width: $screen-md-min)
   .next-page
+    h1
+      width: 800px
+      margin: 0 auto
+    .content
+      height: 100%
+      overflow-y: auto
     .previous
       display: block
       position: absolute
@@ -59,5 +66,5 @@
       img
         display: block
       margin: 0 auto
-      width: 900px
+      width: 800px
     height: 100%
